--- a/package.json
+++ b/package.json
@@ -1,13 +1,32 @@
 {
   "name": "transbank-pos-sdk",
-  "version": "4.0.0",
+  "version": "5.0.0",
   "description": "SDK Web para POS Integrado en Node.js",
-  "main": "dist/transbank.js",
+  "type": "module",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "prepublish": "npm run build",
-    "dev": "node ./examples/index.js --watch",
-    "build": "webpack",
-    "start": "webpack --watch",
+    "prepublishOnly": "npm run build",
+    "dev": "tsup --watch",
+    "build": "tsup",
+    "typecheck": "tsc --noEmit",
+    "example": "tsx ./examples/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -24,16 +43,16 @@
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
-    "@serialport/parser-inter-byte-timeout": "^12.0.0",
-    "@babel/runtime": "^7.25.7",
+    "@serialport/parser-inter-byte-timeout": "^13.0.0",
     "lrc-calculator": "^0.1.1",
-    "serialport": "^12.0.0"
+    "serialport": "^13.0.0"
   },
   "devDependencies": {
-    "inquirer": "^12.2.0",
-    "jest": "^29.7.0",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^5.1.4"
+    "@types/node": "^20.0.0",
+    "inquirer": "^13.0.2",
+    "tsup": "^8.0.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.3.0"
   },
   "engines": {
     "node": ">=20.0.0"
