--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dev": "tsup --watch",
     "build": "tsup",
     "typecheck": "tsc --noEmit",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "example": "tsx ./examples/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -39,7 +41,9 @@
     "email": "transbankdevelopers@continuum.cl"
   },
   "contributors": [
-    { "name": "Gonzalo De Spírito" }
+    {
+      "name": "Gonzalo De Spírito"
+    }
   ],
   "license": "BSD-3-Clause",
   "dependencies": {
@@ -48,11 +52,15 @@
     "serialport": "^13.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "@stylistic/eslint-plugin": "^5.6.1",
     "@types/node": "^20.0.0",
+    "eslint": "^9.16.0",
     "inquirer": "^13.0.2",
     "tsup": "^8.0.0",
     "tsx": "^4.0.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "typescript-eslint": "^8.17.0"
   },
   "engines": {
     "node": ">=20.0.0"
